refactor : 코드 서식 정리